--- a/favoriteDino.css
+++ b/favoriteDino.css
@@ -2,3 +2,12 @@ body {
   background-color: lightblue;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+img {
+  width: 40%;
+  height: 40%;
+}
+
+.cardOne {
+  font-size: medium;
+}
