--- a/favoriteDino.css
+++ b/favoriteDino.css
@@ -11,3 +11,50 @@ img {
 .cardOne {
   font-size: medium;
 }
+
+.cardTwo {
+  font-size: medium;
+}
+
+.gallery {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding: 10px;
+}
+
+.aboutDinosaur {
+  display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    margin: 10px;
+    box-shadow:  5px 5px 5px rgba(85, 16, 16, 0.7)
+}
+
+.aboutMe {
+  display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    margin: 10px;
+    box-shadow:  5px 5px 5px rgba(85, 16, 16, 0.7)
+}
+
+.mainHeader {
+  margin-top: auto;
+  padding-bottom: 20px;
+  text-align: center;
+  width: 100%;
+  height: 2.5rem;
+  font-size: 50px;
+}
+.footer {
+  text-align: center;
+  padding: 2px;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;            
+}
